Systems/User/Widgets/LogoutButton/Web/UserLogoutButton.css
#userLogoutButton {
    -moz-border-radius: 14px 0 0 14px;
}

#userLogoutButton.GUIToolbar-button .UserLogoutButton-icon {
    background: url(logout_act.png) no-repeat;
}

/* Intervention popup styles */
#userLogoutButton-intervention {
    width: 200px;
}

#userLogoutButton-intervention .GUIIntervention-content {
    text-align: center;
}

#userLogoutButton-intervention .GUIIntervention-content button {
    margin-top: 10px;
}

#userLogoutButton-intervention .GUIIntervention-content #userLogoutButton-ivbuttonNo {
    margin-right: 10px;
}

